--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <description>CS544 - Final Project</description>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <java.version>1.8</java.version>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -26,6 +26,7 @@
         <module>mail-service</module>
         <module>mail-cron</module>
         <module>service-registry</module>
+        <module>common-model</module>
     </modules>
 
     <build>
