--- a/mail-service/src/main/resources/application.yml
+++ b/mail-service/src/main/resources/application.yml
@@ -1,6 +1,23 @@
 spring:
   application:
     name: mail-service
+  mail:
+    host:
+      173.194.66.108
+    port:
+        587
+    username:
+      cs544.project@gmail.com
+    password:
+      yvhogxzjyibjxpzh
+    properties:
+      mail:
+        smtp:
+          auth:
+            true
+          starttls:
+            enable:
+              true
 
 server:
   port:
