--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -32,6 +32,16 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
             <groupId>miu.edu.ea</groupId>
             <artifactId>common-model</artifactId>
             <version>1.0-SNAPSHOT</version>
