--- a/common-service/src/main/resources/application.yml
+++ b/common-service/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/AirlineReservationSystem
     username: root
-    password: root
+    password:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
