--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -11,8 +11,8 @@
     <groupId>miu.edu.ea</groupId>
     <artifactId>auth-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>auth-service</name>
-    <description>auth-service</description>
+    <name>auth-services</name>
+    <description>auth-services</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
