--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -11,8 +11,8 @@
     <groupId>miu.edu.ea</groupId>
     <artifactId>common-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>common-service</name>
-    <description>common-service</description>
+    <name>common-services</name>
+    <description>common-services</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
