--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: spring-boot-server
   datasource:
-    url: jdbc:mysql://localhost:3306/flightreservation
+    url: jdbc:mysql://${MYSQL_HOST}:3306/flightreservation
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
